--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
                               margin-bottom: 40px;
                             }
                           </style>
-                        <p>Hello, I'm Abhishekh P R, a passionate software developer and data science enthusiast. I focus on creating robust solutions that streamline processes and enhance user experiences. My journey in technology has equipped me with deep expertise in Python, neural networks, and data visualization, as well as a solid grounding in statistical analysis and gradient boosting algorithms. I thrive on continuous learning and innovation, always eager to collaborate with forward-thinking teams to push the boundaries of what's possible. Whether it's building intelligent systems or crafting elegant, efficient code, I’m dedicated to driving meaningful impact in the tech industry.</p> 
+                        <p>Hello, I'm Abhishekh P R, A passionate software developer and data science enthusiast. I focus on creating robust solutions that streamline processes and enhance user experiences. My journey in technology has equipped me with deep expertise in Python, neural networks, and data visualization, as well as a solid grounding in statistical analysis and gradient boosting algorithms. I thrive on continuous learning and innovation, always eager to collaborate with forward-thinking teams to push the boundaries of what's possible. Whether it's building intelligent systems or crafting elegant, efficient code, I’m dedicated to driving meaningful impact in the tech industry.</p> 
 
                         <div class="resume-container">
                             <a href="Abhishekh P R(Resume).pdf" target ="_blank" class="resume-button" download>
