--- a/index.html
+++ b/index.html
@@ -841,5 +841,8 @@
 
     window.addEventListener('load', initNetwork);
     </script>
+    <footer class="simple-footer">
+    <p>© 2025 Abhishekh. All rights reserved.</p>
+  </footer>
 </body>
 </html>
