--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
                         <p>I'm Abhishekh P R, a tech enthusiast passionate about machine learning and software development. I am driven by the challenge of building intelligent systems and scalable solutions that address real-world problems. From exploring data to developing dynamic applications, I am always looking forward to pushing boundaries and creating impactful projects. Let's innovate and build something extraordinary together! </p>
 
                         <div class="resume-container">
-                            <a href="Abhishekh P R(Resume).pdf" target ="_blank" class="resume-button" download>
+                            <a href="Abhishekh_PR_resume_2025.pdf" target ="_blank" class="resume-button" download>
                                 <i class="fas fa-download"></i> Download Resume
                             </a>
                         </div>                           
